# aio_sync

./: README.md  pyproject.toml  static_checks.sh
src/aio_sync/: mpmc.py  oneshot.py
src/aiosync/: __init__.py  mpmc.py  mutex.py
tests/: test_mpmc.py  test_mutex.py  test_oneshot.py
