[project]
name = "aiosync"
version = "0.1.0"
description = "Synchronization helpers for asyncio"
readme = "README.md"
authors = [
    { name = "Steven Hé (Sīchàng)", email = "stevensichanghe@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
