[project]
name = "aio_sync"
version = "0.1.1"
description = "Synchronization helpers for asyncio"
readme = "README.md"
authors = [
    { name = "Steven Hé (Sīchàng)", email = "stevensichanghe@gmail.com" },
]
requires-python = ">=3.13" # For QueueShutDown
dependencies = []

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.13"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
